Fixed landing_footer overflow and changed colors on main_nav states

--- a/app/styles/components/_landing_section.scss
+++ b/app/styles/components/_landing_section.scss
@@ -45,5 +45,6 @@
 
 	footer {
 		margin: 0 -2em;
+		overflow: hidden;
 	}
 }
